frontend/components/queries/QueryResultsTable/_styles.scss
.query-results-table {
  background-color: $white;
  padding: $pad-base;
  max-width: 100%;
  box-sizing: border-box;

  &__export-btn {
    float: right;
  }

  &__filter-icon {
    &--is-active {
      color: $brand;
    }
  }

  &__progress-details {
    display: inline-block;
    width: 378px;
  }

  &__table-wrapper {
    border: solid 1px $accent-dark;
    border-radius: 3px;
    box-shadow: inset 0 0 8px 0 rgba(0, 0, 0, 0.12);
    overflow: scroll;
    margin-top: 20px;
    max-height: 550px;
  }

  &__table {
    border-collapse: collapse;
    color: $text-medium;
    font-size: $small;
    width: 100%;
  }

  thead {
    background-color: $bg-medium;
    color: $text-ultradark;
    text-align: left;

    th {
      padding: $pad-small $pad-xsmall;
      min-width: 125px;
    }

    .input-field {
      width: 100%;
    }
  }

  tbody {
    background-color: $white;
    // height: 550px;
    // min-width: 100%;
    // overflow: auto;
    // display: inline-block;

    td {
      padding: $pad-xsmall;
      // min-width: 125px;
    }

    tr {
      &:nth-child(even) {
        background-color: $bg-light;
      }
    }
  }
}

